[gd_scene load_steps=4 format=2]

[ext_resource path="res://Objects/Game_modes/CCP/checkPoint.gd" type="Script" id=1]
[ext_resource path="res://Objects/Misc/spawn_point.tscn" type="PackedScene" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 305.816

[node name="checkPoint" type="Area2D" groups=[
"CheckPoint",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="spawnPoints" type="Node2D" parent="."]

[node name="spawn_point2" parent="spawnPoints" instance=ExtResource( 2 )]
position = Vector2( -4.10107, -268.621 )

[node name="spawn_point4" parent="spawnPoints" instance=ExtResource( 2 )]
position = Vector2( 282.975, 6.15161 )

[node name="spawn_point3" parent="spawnPoints" instance=ExtResource( 2 )]
position = Vector2( -315.783, 4.10107 )

[node name="spawn_point" parent="spawnPoints" instance=ExtResource( 2 )]
position = Vector2( 0, 282.975 )
[connection signal="body_entered" from="." to="." method="_on_checkPoint_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_checkPoint_body_exited"]
